--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@expo/vector-icons": "^14.0.2",
     "@react-navigation/native": "^7.0.14",
     "expo": "~52.0.27",
+    "expo-av": "^15.0.2",
     "expo-font": "~13.0.3",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.4",
@@ -28,10 +29,12 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.6",
+    "react-native-gesture-handler": "^2.22.1",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
     "react-native-screens": "~4.4.0",
+    "react-native-video": "^6.10.0",
     "react-native-web": "~0.19.13",
     "tailwindcss": "^3.4.17",
     "travel-media": "file:"
